setup frontend and create homepage loginpage registerpage
