# Backend/static/swagger.json
@@ -91,7 +91,7 @@
       "Login": {
         "type": "object",
         "properties": {
-          "username": {
+          "email": {
             "type": "string"
           },
           "password": {
@@ -99,7 +99,7 @@
           }
         },
         "required": [
-          "username",
+          "email",
           "password"
         ]
       }
